--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -8,7 +8,8 @@ body {
   margin: 0; }
 
 p {
-  font-size: 40px; }
+  font-size: 40px;
+  color: #4c4c4c; }
   @media (min-width: 1024px) {
     p {
       font-size: 20px; } }
@@ -16,7 +17,8 @@ p {
 li {
   font-size: 30px;
   line-height: 70px;
-  font-weight: 400; }
+  font-weight: 300;
+  color: #4c4c4c; }
   @media (min-width: 1024px) {
     li {
       font-size: 16px;
@@ -40,47 +42,73 @@ h2 {
       h2 .japaneseTitle {
         font-size: 20px; } }
 
-.line_btn {
+.comment_txt {
+  font-weight: 300;
+  font-size: 30px;
+  margin-top: 50px;
+  display: block;
+  margin-left: 40px;
+  font-family: sans-serif; }
+  @media (min-width: 1024px) {
+    .comment_txt {
+      font-size: 15px;
+      margin-top: 20px;
+      margin-left: 0; } }
+
+.icons_cont {
   display: flex;
   flex-direction: row;
-  text-decoration: none;
-  align-items: center;
-  background-color: white;
-  margin-top: 10px;
-  position: relative;
-  border-radius: 2px;
-  border-radius: 3px;
-  margin-top: 68px;
-  width: 500px;
-  border-radius: 15px;
-  background-color: #00c300;
-  transition: all 0.2s ease; }
-  @media (min-width: 1024px) {
-    .line_btn {
-      border-radius: 10px;
-      width: 259px; } }
-  .line_btn .line_logo {
-    height: 100px;
-    margin-left: 13px; }
+  align-items: baseline;
+  margin-top: 67px; }
+  .icons_cont .insta_logo {
+    width: 96px;
+    margin-left: 100px;
+    transition: all 0.5s ease; }
     @media (min-width: 1024px) {
-      .line_btn .line_logo {
-        height: 50px;
-        margin-left: 10px; } }
-  .line_btn .line_btn_txt {
-    font-weight: bold;
-    color: #fff;
-    letter-spacing: 2px;
-    font-family: 'Noto Sans JP', sans-serif;
-    font-size: 34px;
-    transition: all 0.2s ease;
-    margin: 0 auto; }
+      .icons_cont .insta_logo {
+        width: 48px;
+        margin-left: 50px; } }
+    .icons_cont .insta_logo:hover {
+      filter: saturate(1.3); }
+  .icons_cont .line_btn {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    align-items: center;
+    background-color: white;
+    position: relative;
+    border-radius: 2px;
+    border-radius: 3px;
+    width: 500px;
+    border-radius: 15px;
+    background-color: #00c300;
+    transition: all 0.2s ease; }
     @media (min-width: 1024px) {
-      .line_btn .line_btn_txt {
-        font-size: 17px; } }
-  .line_btn:hover {
-    background-color: #00e000; }
-    .line_btn:hover .line_btn_txt {
-      color: #fff; }
+      .icons_cont .line_btn {
+        border-radius: 10px;
+        width: 259px; } }
+    .icons_cont .line_btn .line_logo {
+      height: 100px;
+      margin-left: 13px; }
+      @media (min-width: 1024px) {
+        .icons_cont .line_btn .line_logo {
+          height: 50px;
+          margin-left: 10px; } }
+    .icons_cont .line_btn .line_btn_txt {
+      font-weight: bold;
+      color: #fff;
+      letter-spacing: 2px;
+      font-family: 'Noto Sans JP', sans-serif;
+      font-size: 34px;
+      transition: all 0.2s ease;
+      margin: 0 auto; }
+      @media (min-width: 1024px) {
+        .icons_cont .line_btn .line_btn_txt {
+          font-size: 17px; } }
+    .icons_cont .line_btn:hover {
+      background-color: #00e000; }
+      .icons_cont .line_btn:hover .line_btn_txt {
+        color: #fff; }
 
 .subtitle {
   color: #4c4c4c; }
@@ -237,9 +265,10 @@ h2 {
       color: #4c4c4c; }
     .l-frame #access .address_cont .telephone {
       text-decoration: none;
-      color: #9F456F;
+      color: #E061B0;
       font-size: 40px;
       margin-top: 39px;
+      font-weight: 400;
       display: block; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .telephone {
@@ -285,6 +314,9 @@ h2 {
       .l-frame #schedule {
         width: 90%;
         margin: 0 auto; } }
+    .l-frame #schedule .calendar_iframe {
+      border-width: 0;
+      width: 100%; }
   .l-frame #aboutme .aboutme_cont {
     display: flex;
     flex-direction: column;
@@ -302,12 +334,30 @@ h2 {
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .profile_pic {
           width: 35%;
+          height: 426px;
           margin: 0;
           border-radius: 10px; } }
     .l-frame #aboutme .aboutme_cont .infos {
       margin: 0 auto;
       width: 80%;
       margin-top: 50px; }
+      .l-frame #aboutme .aboutme_cont .infos .name_j {
+        font-size: 48px;
+        line-height: 0;
+        font-weight: 400;
+        color: #4c4c4c; }
+        @media (min-width: 1024px) {
+          .l-frame #aboutme .aboutme_cont .infos .name_j {
+            font-size: 24px;
+            line-height: 22.8px; } }
+      .l-frame #aboutme .aboutme_cont .infos .name_e {
+        font-size: 16px;
+        margin-bottom: 40px;
+        line-height: 0; }
+        @media (min-width: 1024px) {
+          .l-frame #aboutme .aboutme_cont .infos .name_e {
+            line-height: 29.8px;
+            margin-bottom: 20px; } }
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .infos {
           width: 50%;
@@ -330,17 +380,6 @@ h2 {
     @media (min-width: 1024px) {
       .l-frame #instagram {
         width: 90%; } }
-    .l-frame #instagram .instagram_txt {
-      font-weight: 300;
-      font-size: 30px;
-      margin-top: 50px;
-      display: block;
-      margin-left: 40px; }
-      @media (min-width: 1024px) {
-        .l-frame #instagram .instagram_txt {
-          font-size: 15px;
-          margin-top: 20px;
-          margin-left: 0; } }
   .l-frame .footer {
     font-size: 30px;
     margin: 0 auto;
