--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -9,6 +9,7 @@ body{
 }
 p{
 	font-size: 40px;
+  color: #4c4c4c;
 	@media (min-width: 1024px) {
 		font-size: 20px;
 	}
@@ -16,7 +17,8 @@ p{
 li{
 	font-size: 30px;
 	line-height: 70px;
-	font-weight: 400;
+	font-weight: 300;
+  color: #4c4c4c;
 	@media (min-width: 1024px) {
 		font-size: 16px;
 		line-height: 35px;
@@ -43,51 +45,82 @@ h2{
 		}
 	}
 }
-.line_btn{
+
+.comment_txt{
+	font-weight: 300;
+	font-size: 30px;
+	margin-top: 50px;
+	display: block;
+	margin-left: 40px;
+	font-family: sans-serif;
+	@media (min-width: 1024px) {
+		font-size: 15px;
+		margin-top: 20px;
+		margin-left: 0;
+	}
+}
+
+.icons_cont{
 	display: flex;
 	flex-direction: row;
-	text-decoration: none;
-	align-items: center;
-	background-color: white;
-	margin-top: 10px;
-	position: relative;
-	border-radius: 2px;
-	border-radius: 3px;
-	margin-top: 68px;
-	width: 500px;
-	border-radius: 15px;
-	background-color:#00c300;
-	@media (min-width: 1024px) {
-		border-radius: 10px;
-		width: 259px;
-	}
-	.line_logo{
-		height: 100px;
-		margin-left: 13px;
+  align-items: baseline;
+	margin-top: 67px;
+	.insta_logo{
+		width: 96px;
+		margin-left: 100px;
+		transition: all 0.5s ease;
 		@media (min-width: 1024px) {
-			height: 50px;
-			margin-left: 10px;
+			width: 48px;
+			margin-left: 50px;
+		}
+		&:hover{
+			filter:saturate(1.3);
 		}
 	}
-
-	.line_btn_txt{
-		font-weight: bold;
-		color:#fff;
-    letter-spacing: 2px;
-		font-family: 'Noto Sans JP', sans-serif;
-		font-size: 34px;
-		transition: all 0.2s ease;
-		margin: 0 auto;
-
+	.line_btn{
+		display: flex;
+		flex-direction: row;
+		text-decoration: none;
+		align-items: center;
+		background-color: white;
+		position: relative;
+		border-radius: 2px;
+		border-radius: 3px;
+		width: 500px;
+		border-radius: 15px;
+		background-color:#00c300;
 		@media (min-width: 1024px) {
-			font-size: 17px;
+			border-radius: 10px;
+			width: 259px;
 		}
-	}
-	transition: all 0.2s ease;
-	&:hover{
-		background-color:#00e000;
+		.line_logo{
+			height: 100px;
+			margin-left: 13px;
+			@media (min-width: 1024px) {
+				height: 50px;
+				margin-left: 10px;
+			}
+		}
+
 		.line_btn_txt{
+			font-weight: bold;
 			color:#fff;
+			letter-spacing: 2px;
+			font-family: 'Noto Sans JP', sans-serif;
+			font-size: 34px;
+			transition: all 0.2s ease;
+			margin: 0 auto;
+
+			@media (min-width: 1024px) {
+				font-size: 17px;
+			}
+		}
+		transition: all 0.2s ease;
+		&:hover{
+			background-color:#00e000;
+			.line_btn_txt{
+				color:#fff;
+			}
 		}
 	}
 }
@@ -297,9 +330,10 @@ h2{
 			}
 			.telephone{
 				text-decoration: none;
-				color: #9F456F;
+				color: #E061B0;
 				font-size: 40px;
 				margin-top: 39px;
+				font-weight: 400;
 		    display: block;
 				@media (min-width: 1024px) {
 					font-size: 20px;
@@ -358,10 +392,12 @@ h2{
 			width: 90%;
     		margin: 0 auto;
 		}
-		.iframe{
-
+		.calendar_iframe{
+			border-width: 0;
+	    width: 100%;
 		}
 	}
+
 	#aboutme{
 		.aboutme_cont{
 			display: flex;
@@ -381,6 +417,7 @@ h2{
 
 				@media (min-width: 1024px) {
 					width: 35%;
+					height: 426px;
 					margin: 0;
 					border-radius: 10px;
 				}
@@ -390,6 +427,25 @@ h2{
 				margin: 0 auto;
 				width: 80%;
 				margin-top: 50px;
+				.name_j{
+			    font-size: 48px;
+					line-height: 0;
+					font-weight: 400;
+					color: #4c4c4c;
+					@media (min-width: 1024px) {
+						font-size: 24px;
+						line-height: 22.8px;
+					}
+				}
+				.name_e{
+					font-size: 16px;
+					margin-bottom: 40px;
+					line-height: 0;
+					@media (min-width: 1024px) {
+						line-height: 29.8px;
+						margin-bottom: 20px;
+					}
+				}
 
 				@media (min-width: 1024px) {
 					width: 50%;
@@ -419,18 +475,6 @@ h2{
     margin: 0 auto;
 		@media (min-width: 1024px) {
 			width: 90%;
-		}
-		.instagram_txt{
-			font-weight: 300;
-			font-size: 30px;
-			margin-top: 50px;
-			display: block;
-			margin-left: 40px;
-			@media (min-width: 1024px) {
-				font-size: 15px;
-				margin-top: 20px;
-				margin-left: 0;
-			}
 		}
 	}
 
