--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -302,9 +302,11 @@ h2 {
     .l-frame #access .address_cont .map {
       width: 100vw;
       height: 1000px;
-      margin: 0 0 50px 0; }
+      margin: 0 0 50px 0;
+      margin-top: 30px; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .map {
+          margin-top: 0;
           width: 30%;
           height: 380px;
           margin: 21px 0 0 0; } }
@@ -315,10 +317,12 @@ h2 {
         width: 90%;
         margin: 0 auto; } }
     .l-frame #schedule .calendar_txt {
-      margin-left: 40px; }
+      margin-left: 40px;
+      line-height: 70px; }
       @media (min-width: 1024px) {
         .l-frame #schedule .calendar_txt {
-          margin-left: 0; } }
+          margin-left: 0;
+          line-height: 35px; } }
     .l-frame #schedule .calendar_iframe {
       border-width: 0;
       width: 100%;
@@ -387,6 +391,11 @@ h2 {
     @media (min-width: 1024px) {
       .l-frame #instagram {
         width: 90%; } }
+    .l-frame #instagram iframe {
+      margin-top: 30px; }
+      @media (min-width: 1024px) {
+        .l-frame #instagram iframe {
+          margin-top: 0; } }
   .l-frame .footer {
     font-size: 30px;
     margin: 0 auto;
