--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -376,7 +376,9 @@ h2{
 				width: 100vw;
 				height: 1000px;
 				margin: 0 0 50px 0;
+		    margin-top: 30px;
 				@media (min-width: 1024px) {
+					margin-top: 0;
 					width: 30%;
 					height: 380px;
 			    margin: 21px 0 0 0;
@@ -394,8 +396,11 @@ h2{
 		}
 		.calendar_txt{
 			margin-left: 40px;
+			line-height: 70px;
+
 			@media (min-width: 1024px) {
 				margin-left: 0;
+				line-height: 35px;
 			}
 		}
 		.calendar_iframe{
@@ -483,6 +488,12 @@ h2{
     margin: 0 auto;
 		@media (min-width: 1024px) {
 			width: 90%;
+		}
+		iframe{
+			margin-top: 30px;
+			@media (min-width: 1024px) {
+				margin-top: 0;
+			}
 		}
 	}
 
