--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -8,51 +8,33 @@ body {
   margin: 0; }
 
 p {
-  font-size: 40px;
-  color: #4c4c4c; }
-  @media (min-width: 1024px) {
-    p {
-      font-size: 20px; } }
+  color: #4c4c4c;
+  font-size: 15px; }
 
 li {
-  font-size: 30px;
-  line-height: 70px;
   font-weight: 300;
-  color: #4c4c4c; }
-  @media (min-width: 1024px) {
-    li {
-      font-size: 16px;
-      line-height: 35px; } }
+  color: #4c4c4c;
+  font-size: 16px;
+  line-height: 35px; }
 
 h1 {
-  font-size: 80px;
+  font-size: 40px;
   font-weight: 400; }
-  @media (min-width: 1024px) {
-    h1 {
-      font-size: 40px; } }
 
 h2 {
-  font-size: 50px; }
-  @media (min-width: 1024px) {
-    h2 {
-      font-size: 25px; } }
+  font-size: 25px; }
   h2 .japaneseTitle {
-    font-size: 40px; }
-    @media (min-width: 1024px) {
-      h2 .japaneseTitle {
-        font-size: 20px; } }
+    font-size: 17px; }
 
 .comment_txt {
   font-weight: 300;
-  font-size: 30px;
-  margin-top: 50px;
   display: block;
-  margin-left: 40px;
-  font-family: sans-serif; }
+  margin-left: 20px;
+  font-family: sans-serif;
+  font-size: 14px;
+  margin-top: 20px; }
   @media (min-width: 1024px) {
     .comment_txt {
-      font-size: 15px;
-      margin-top: 20px;
       margin-left: 0; } }
 
 .icons_cont {
@@ -61,13 +43,9 @@ h2 {
   align-items: baseline;
   margin-top: 67px; }
   .icons_cont .insta_logo {
-    width: 96px;
-    margin-left: 100px;
+    width: 48px;
+    margin-left: 50px;
     transition: all 0.5s ease; }
-    @media (min-width: 1024px) {
-      .icons_cont .insta_logo {
-        width: 48px;
-        margin-left: 50px; } }
     .icons_cont .insta_logo:hover {
       filter: saturate(1.3); }
   .icons_cont .line_btn {
@@ -79,32 +57,21 @@ h2 {
     position: relative;
     border-radius: 2px;
     border-radius: 3px;
-    width: 500px;
-    border-radius: 15px;
     background-color: #00c300;
+    border-radius: 10px;
+    width: 259px;
     transition: all 0.2s ease; }
-    @media (min-width: 1024px) {
-      .icons_cont .line_btn {
-        border-radius: 10px;
-        width: 259px; } }
     .icons_cont .line_btn .line_logo {
-      height: 100px;
-      margin-left: 13px; }
-      @media (min-width: 1024px) {
-        .icons_cont .line_btn .line_logo {
-          height: 50px;
-          margin-left: 10px; } }
+      height: 50px;
+      margin-left: 10px; }
     .icons_cont .line_btn .line_btn_txt {
       font-weight: bold;
       color: #fff;
       letter-spacing: 2px;
       font-family: 'Noto Sans JP', sans-serif;
-      font-size: 34px;
       transition: all 0.2s ease;
-      margin: 0 auto; }
-      @media (min-width: 1024px) {
-        .icons_cont .line_btn .line_btn_txt {
-          font-size: 17px; } }
+      margin: 0 auto;
+      font-size: 14px; }
     .icons_cont .line_btn:hover {
       background-color: #00e000; }
       .icons_cont .line_btn:hover .line_btn_txt {
@@ -114,12 +81,9 @@ h2 {
   color: #4c4c4c; }
 
 .small_font {
-  font-size: 25px;
+  font-size: 13px;
   vertical-align: super;
   color: #AC2424; }
-  @media (min-width: 1024px) {
-    .small_font {
-      font-size: 13px; } }
 
 .has-line {
   border-bottom: 1px dashed #d3d3d3; }
@@ -191,10 +155,12 @@ h2 {
               color: black; } }
   .l-frame .full_image {
     object-fit: cover;
-    height: 900px; }
+    height: 350px; }
+    @media (min-width: 1024px) {
+      .l-frame .full_image {
+        height: 900px; } }
   .l-frame .big_title {
-    margin-top: 160px;
-    margin-bottom: 70px;
+    margin-top: 40px 0;
     color: #4c4c4c;
     text-align: center;
     color: #E061B0;
@@ -203,7 +169,57 @@ h2 {
       .l-frame .big_title {
         margin-top: 100px; }
         .l-frame .big_title.small {
-          margin-bottom: 40px; } }
+          margin-top: 43px 0; } }
+  .l-frame #aboutme .aboutme_cont {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; }
+    @media (min-width: 1024px) {
+      .l-frame #aboutme .aboutme_cont {
+        flex-direction: row;
+        margin-left: 3vw; } }
+    .l-frame #aboutme .aboutme_cont .profile_pic {
+      width: 250px;
+      height: 250px;
+      margin: 0 auto;
+      border-radius: 580px;
+      object-fit: cover; }
+      @media (min-width: 1024px) {
+        .l-frame #aboutme .aboutme_cont .profile_pic {
+          width: 35%;
+          height: 426px;
+          margin: 0;
+          border-radius: 10px; } }
+    .l-frame #aboutme .aboutme_cont .infos {
+      margin: 0 auto;
+      width: 80%;
+      margin-top: 10px; }
+      .l-frame #aboutme .aboutme_cont .infos .name_j {
+        font-size: 24px;
+        font-weight: 400;
+        color: #4c4c4c;
+        margin-bottom: 0; }
+      .l-frame #aboutme .aboutme_cont .infos .name_e {
+        line-height: 0;
+        font-size: 16px;
+        line-height: 29.8px;
+        margin-bottom: 20px;
+        margin-top: 0; }
+      @media (min-width: 1024px) {
+        .l-frame #aboutme .aboutme_cont .infos {
+          width: 50%;
+          margin-top: 0; } }
+      .l-frame #aboutme .aboutme_cont .infos > p {
+        line-height: 35px;
+        font-weight: 300; }
+        @media (min-width: 1024px) {
+          .l-frame #aboutme .aboutme_cont .infos > p {
+            margin: 0;
+            width: 90%;
+            line-height: 39.8px; } }
+      .l-frame #aboutme .aboutme_cont .infos .info {
+        display: flex;
+        flex-direction: row; }
   .l-frame #price, .l-frame #access {
     width: 85%;
     margin: 0 auto; }
@@ -235,7 +251,6 @@ h2 {
     .l-frame .price_cont .obs {
       width: 100%;
       background-color: #f3f3f3;
-      padding: 18px 28px;
       box-sizing: border-box;
       margin-top: 20px; }
       @media (min-width: 1024px) {
@@ -243,7 +258,7 @@ h2 {
           width: 40%;
           margin-top: 0; } }
       .l-frame .price_cont .obs ul {
-        padding: 40px; }
+        padding: 20px 30px; }
         .l-frame .price_cont .obs ul li {
           margin-bottom: 10px;
           list-style-type: none;
@@ -268,19 +283,13 @@ h2 {
     .l-frame #access .address_cont .telephone {
       text-decoration: none;
       color: #E061B0;
-      font-size: 40px;
       margin-top: 39px;
       font-weight: 400;
-      display: block; }
-      @media (min-width: 1024px) {
-        .l-frame #access .address_cont .telephone {
-          font-size: 20px; } }
+      display: block;
+      font-size: 20px; }
     .l-frame #access .address_cont .middle_font {
-      font-size: 30px;
+      font-size: 15px;
       margin: 0; }
-      @media (min-width: 1024px) {
-        .l-frame #access .address_cont .middle_font {
-          font-size: 15px; } }
     .l-frame #access .address_cont .address {
       margin: 0 auto;
       width: 80%; }
@@ -292,20 +301,16 @@ h2 {
           font-weight: 300;
           margin-right: 80px; } }
     .l-frame #access .address_cont .subway_logo {
-      width: 46px;
-      margin-right: 30px; }
-      @media (min-width: 1024px) {
-        .l-frame #access .address_cont .subway_logo {
-          width: 26px;
-          padding-top: 12px;
-          margin-right: 20px; } }
+      width: 26px;
+      padding-top: 12px;
+      margin-right: 20px; }
       .l-frame #access .address_cont .subway_logo img {
         width: 100%; }
     .l-frame #access .address_cont .map {
       width: 100vw;
-      height: 1000px;
+      height: 380px;
       margin: 0 0 50px 0;
-      margin-top: 60px; }
+      margin-top: 40px; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .map {
           margin-top: 0;
@@ -320,73 +325,14 @@ h2 {
         margin: 0 auto; } }
     .l-frame #schedule .calendar_txt {
       margin-left: 40px;
-      line-height: 70px; }
+      line-height: 25px; }
       @media (min-width: 1024px) {
         .l-frame #schedule .calendar_txt {
-          margin-left: 0;
-          line-height: 35px; } }
+          margin-left: 0; } }
     .l-frame #schedule .calendar_iframe {
       border-width: 0;
       width: 100%;
-      height: 1100px; }
-  .l-frame #aboutme .aboutme_cont {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; }
-    @media (min-width: 1024px) {
-      .l-frame #aboutme .aboutme_cont {
-        flex-direction: row;
-        margin-left: 3vw; } }
-    .l-frame #aboutme .aboutme_cont .profile_pic {
-      width: 500px;
-      height: 500px;
-      margin: 0 auto;
-      border-radius: 580px;
-      object-fit: cover; }
-      @media (min-width: 1024px) {
-        .l-frame #aboutme .aboutme_cont .profile_pic {
-          width: 35%;
-          height: 426px;
-          margin: 0;
-          border-radius: 10px; } }
-    .l-frame #aboutme .aboutme_cont .infos {
-      margin: 0 auto;
-      width: 80%;
-      margin-top: 50px; }
-      .l-frame #aboutme .aboutme_cont .infos .name_j {
-        font-size: 48px;
-        line-height: 0;
-        font-weight: 400;
-        color: #4c4c4c; }
-        @media (min-width: 1024px) {
-          .l-frame #aboutme .aboutme_cont .infos .name_j {
-            font-size: 24px;
-            line-height: 22.8px; } }
-      .l-frame #aboutme .aboutme_cont .infos .name_e {
-        font-size: 32px;
-        margin-bottom: 40px;
-        line-height: 0; }
-        @media (min-width: 1024px) {
-          .l-frame #aboutme .aboutme_cont .infos .name_e {
-            font-size: 16px;
-            line-height: 29.8px;
-            margin-bottom: 20px; } }
-      @media (min-width: 1024px) {
-        .l-frame #aboutme .aboutme_cont .infos {
-          width: 50%;
-          margin-top: 0; } }
-      .l-frame #aboutme .aboutme_cont .infos > p {
-        margin-top: 60px;
-        line-height: 80px;
-        font-weight: 300; }
-        @media (min-width: 1024px) {
-          .l-frame #aboutme .aboutme_cont .infos > p {
-            margin: 0;
-            width: 90%;
-            line-height: 39.8px; } }
-      .l-frame #aboutme .aboutme_cont .infos .info {
-        display: flex;
-        flex-direction: row; }
+      height: 460px; }
   .l-frame #instagram {
     width: 100%;
     margin: 0 auto; }
@@ -394,18 +340,15 @@ h2 {
       .l-frame #instagram {
         width: 90%; } }
     .l-frame #instagram iframe {
-      margin-top: 60px; }
+      margin-top: 10px; }
       @media (min-width: 1024px) {
         .l-frame #instagram iframe {
           margin-top: 0; } }
   .l-frame .footer {
-    font-size: 30px;
+    font-size: 15px;
     margin: 0 auto;
     text-align: center;
     margin: 80px 0 60px 0; }
-    @media (min-width: 1024px) {
-      .l-frame .footer {
-        font-size: 15px; } }
     @media (min-width: 1024px) {
       .l-frame .footer {
         margin: 80px 0 30px 0; } }
