--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -8,54 +8,38 @@ body{
   margin: 0;
 }
 p{
-	font-size: 40px;
   color: #4c4c4c;
-	@media (min-width: 1024px) {
-		font-size: 20px;
-	}
+	font-size: 15px;
 }
 li{
-	font-size: 30px;
-	line-height: 70px;
 	font-weight: 300;
   color: #4c4c4c;
+	font-size: 16px;
+	line-height: 35px;
 	@media (min-width: 1024px) {
-		font-size: 16px;
-		line-height: 35px;
 	}
 }
 
 h1{
-	font-size: 80px;
-	@media (min-width: 1024px) {
-		font-size: 40px;
-	}
+	font-size: 40px;
 	font-weight: 400;
 }
 
 h2{
-	font-size: 50px;
-	@media (min-width: 1024px) {
-		font-size: 25px;
-	}
+	font-size: 25px;
 	.japaneseTitle{
-		font-size: 40px;
-		@media (min-width: 1024px) {
-			font-size: 20px;
-		}
+		font-size: 17px;
 	}
 }
 
 .comment_txt{
 	font-weight: 300;
-	font-size: 30px;
-	margin-top: 50px;
 	display: block;
-	margin-left: 40px;
+	margin-left: 20px;
 	font-family: sans-serif;
+	font-size: 14px;
+	margin-top: 20px;
 	@media (min-width: 1024px) {
-		font-size: 15px;
-		margin-top: 20px;
 		margin-left: 0;
 	}
 }
@@ -66,13 +50,9 @@ h2{
   align-items: baseline;
 	margin-top: 67px;
 	.insta_logo{
-		width: 96px;
-		margin-left: 100px;
+		width: 48px;
+		margin-left: 50px;
 		transition: all 0.5s ease;
-		@media (min-width: 1024px) {
-			width: 48px;
-			margin-left: 50px;
-		}
 		&:hover{
 			filter:saturate(1.3);
 		}
@@ -86,20 +66,12 @@ h2{
 		position: relative;
 		border-radius: 2px;
 		border-radius: 3px;
-		width: 500px;
-		border-radius: 15px;
 		background-color:#00c300;
-		@media (min-width: 1024px) {
-			border-radius: 10px;
-			width: 259px;
-		}
+		border-radius: 10px;
+		width: 259px;
 		.line_logo{
-			height: 100px;
-			margin-left: 13px;
-			@media (min-width: 1024px) {
-				height: 50px;
-				margin-left: 10px;
-			}
+			height: 50px;
+			margin-left: 10px;
 		}
 
 		.line_btn_txt{
@@ -107,13 +79,9 @@ h2{
 			color:#fff;
 			letter-spacing: 2px;
 			font-family: 'Noto Sans JP', sans-serif;
-			font-size: 34px;
 			transition: all 0.2s ease;
 			margin: 0 auto;
-
-			@media (min-width: 1024px) {
-				font-size: 17px;
-			}
+			font-size: 14px;
 		}
 		transition: all 0.2s ease;
 		&:hover{
@@ -130,10 +98,7 @@ h2{
 }
 
 .small_font{
-	font-size: 25px;
-	@media (min-width: 1024px) {
-		font-size: 13px;
-	}
+	font-size: 13px;
 	vertical-align: super;
 	color: #AC2424;
 }
@@ -226,12 +191,14 @@ h2{
 	}
 	.full_image{
 		object-fit: cover;
-		height: 900px;
+		height: 350px;
+		@media (min-width: 1024px) {
+			height: 900px;
+		}
 	}
 
 	.big_title{
-		margin-top: 160px;
-		margin-bottom: 70px;
+		margin-top: 40px 0;
 		color: #4c4c4c;
     text-align: center;
 		color: #E061B0;
@@ -239,11 +206,77 @@ h2{
 		@media (min-width: 1024px) {
 			margin-top: 100px;
 			&.small{
-				margin-bottom: 40px;
+				margin-top: 43px 0;
 			}
 		}
 
 	}
+
+	#aboutme{
+		.aboutme_cont{
+			display: flex;
+			flex-direction: column;
+			@media (min-width: 1024px) {
+				flex-direction: row;
+				margin-left: 3vw;
+			}
+			// justify-content: center;
+			align-items: flex-start;
+			.profile_pic{
+				width: 250px;
+				height: 250px;
+				margin: 0 auto;
+				border-radius: 580px;
+				object-fit: cover;
+
+				@media (min-width: 1024px) {
+					width: 35%;
+					height: 426px;
+					margin: 0;
+					border-radius: 10px;
+				}
+			}
+
+			.infos{
+				margin: 0 auto;
+				width: 80%;
+				margin-top: 10px;
+				.name_j{
+					font-size: 24px;
+					font-weight: 400;
+					color: #4c4c4c;
+					margin-bottom: 0;
+				}
+				.name_e{
+					line-height: 0;
+					font-size: 16px;
+					line-height: 29.8px;
+					margin-bottom: 20px;
+					margin-top: 0;
+				}
+
+				@media (min-width: 1024px) {
+					width: 50%;
+					margin-top: 0;
+				}
+				> p{
+					line-height: 35px;
+			    font-weight: 300;
+
+					@media (min-width: 1024px) {
+						margin: 0;
+						width: 90%;
+    				line-height: 39.8px;
+					}
+				}
+				.info{
+					display: flex;
+					flex-direction: row;
+				}
+			}
+		}
+	}
+
 	#price, #access{
 		width: 85%;
 		margin: 0 auto;
@@ -288,7 +321,6 @@ h2{
 		.obs{
 			width: 100%;
 			background-color: #f3f3f3;
-			padding:18px 28px;
 			box-sizing: border-box;
 			margin-top: 20px;
 
@@ -298,7 +330,7 @@ h2{
 			}
 
 			ul{
-				padding: 40px;
+				padding: 20px 30px;;
 
 				li{
 					margin-bottom: 10px;
@@ -334,21 +366,15 @@ h2{
 			.telephone{
 				text-decoration: none;
 				color: #E061B0;
-				font-size: 40px;
 				margin-top: 39px;
 				font-weight: 400;
 		    display: block;
-				@media (min-width: 1024px) {
-					font-size: 20px;
-				}
+				font-size: 20px;
 			}
 
 			.middle_font{
-		    font-size: 30px;
+				font-size: 15px;
 				margin: 0;
-				@media (min-width: 1024px) {
-					font-size: 15px;
-				}
 			}
 			.address{
 				margin: 0 auto;
@@ -363,12 +389,10 @@ h2{
 			}
 
 			.subway_logo{
-				width: 46px;
-				margin-right: 30px;
+				width: 26px;
+				padding-top: 12px;
+				margin-right: 20px;
 				@media (min-width: 1024px) {
-					width: 26px;
-					padding-top: 12px;
-					margin-right: 20px;
 				}
 				img{
 					width: 100%;
@@ -377,9 +401,9 @@ h2{
 
 			.map{
 				width: 100vw;
-				height: 1000px;
+				height: 380px;
 				margin: 0 0 50px 0;
-		    margin-top: 60px;
+		    margin-top: 40px;
 				@media (min-width: 1024px) {
 					margin-top: 0;
 					width: 30%;
@@ -395,97 +419,25 @@ h2{
     padding: 0;
 		@media (min-width: 1024px) {
 			width: 90%;
-    		margin: 0 auto;
+    	margin: 0 auto;
 		}
 
 		.calendar_txt{
 			margin-left: 40px;
-			line-height: 70px;
+			line-height: 25px;
 
 			@media (min-width: 1024px) {
 				margin-left: 0;
-				line-height: 35px;
 			}
 		}
 		.calendar_iframe{
 			border-width: 0;
 	    width: 100%;
-			height: 1100px;
+    	height: 460px;
 		}
 	}
 
-	#aboutme{
-		.aboutme_cont{
-			display: flex;
-			flex-direction: column;
-			@media (min-width: 1024px) {
-				flex-direction: row;
-				margin-left: 3vw;
-			}
-			// justify-content: center;
-			align-items: flex-start;
-			.profile_pic{
-				width: 500px;
-				height: 500px;
-				margin: 0 auto;
-				border-radius: 580px;
-				object-fit: cover;
 
-				@media (min-width: 1024px) {
-					width: 35%;
-					height: 426px;
-					margin: 0;
-					border-radius: 10px;
-				}
-			}
-
-			.infos{
-				margin: 0 auto;
-				width: 80%;
-				margin-top: 50px;
-				.name_j{
-			    font-size: 48px;
-					line-height: 0;
-					font-weight: 400;
-					color: #4c4c4c;
-					@media (min-width: 1024px) {
-						font-size: 24px;
-						line-height: 22.8px;
-					}
-				}
-				.name_e{
-					font-size: 32px;
-					margin-bottom: 40px;
-					line-height: 0;
-					@media (min-width: 1024px) {
-						font-size: 16px;
-						line-height: 29.8px;
-						margin-bottom: 20px;
-					}
-				}
-
-				@media (min-width: 1024px) {
-					width: 50%;
-					margin-top: 0;
-				}
-				> p{
-					margin-top: 60px;
-					line-height: 80px;
-			    font-weight: 300;
-
-					@media (min-width: 1024px) {
-						margin: 0;
-						width: 90%;
-    				line-height: 39.8px;
-					}
-				}
-				.info{
-					display: flex;
-					flex-direction: row;
-				}
-			}
-		}
-	}
 
 	#instagram{
 		width: 100%;
@@ -494,7 +446,7 @@ h2{
 			width: 90%;
 		}
 		iframe{
-			margin-top: 60px;
+			margin-top: 10px;
 			@media (min-width: 1024px) {
 				margin-top: 0;
 			}
@@ -502,10 +454,7 @@ h2{
 	}
 
 	.footer{
-		font-size: 30px;
-		@media (min-width: 1024px) {
-			font-size: 15px;
-		}
+		font-size: 15px;
 		margin: 0 auto;
 		text-align: center;
     margin: 80px 0 60px 0;
