--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -9,13 +9,7 @@ body {
 
 p {
   color: #4c4c4c;
-  font-size: 15px; }
-
-li {
-  font-weight: 300;
-  color: #4c4c4c;
-  font-size: 16px;
-  line-height: 35px; }
+  font-size: 17px; }
 
 h1 {
   font-size: 40px;
@@ -32,7 +26,8 @@ h2 {
   margin-left: 20px;
   font-family: sans-serif;
   font-size: 14px;
-  margin-top: 20px; }
+  margin-top: 20px;
+  width: 90%; }
   @media (min-width: 1024px) {
     .comment_txt {
       margin-left: 0; } }
@@ -41,10 +36,10 @@ h2 {
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  margin-top: 67px; }
+  margin-top: 33px; }
   .icons_cont .insta_logo {
-    width: 48px;
-    margin-left: 50px;
+    width: 38px;
+    margin-left: 40px;
     transition: all 0.5s ease; }
     .icons_cont .insta_logo:hover {
       filter: saturate(1.3); }
@@ -59,10 +54,10 @@ h2 {
     border-radius: 3px;
     background-color: #00c300;
     border-radius: 10px;
-    width: 259px;
+    width: 199px;
     transition: all 0.2s ease; }
     .icons_cont .line_btn .line_logo {
-      height: 50px;
+      height: 40px;
       margin-left: 10px; }
     .icons_cont .line_btn .line_btn_txt {
       font-weight: bold;
@@ -78,7 +73,8 @@ h2 {
         color: #fff; }
 
 .subtitle {
-  color: #4c4c4c; }
+  color: #4c4c4c;
+  margin-top: 0; }
 
 .small_font {
   font-size: 13px;
@@ -129,7 +125,7 @@ h2 {
     font-size: 18px;
     box-sizing: border-box;
     justify-content: center;
-    height: 190px; }
+    height: 80px; }
     @media (min-width: 1024px) {
       .l-frame .header {
         height: 120px;
@@ -138,7 +134,7 @@ h2 {
       .l-frame .header .logo {
         flex: 1; } }
     .l-frame .header .logo img {
-      width: 200px; }
+      width: 100px; }
       @media (min-width: 1024px) {
         .l-frame .header .logo img {
           width: 130px; } }
@@ -160,16 +156,14 @@ h2 {
       .l-frame .full_image {
         height: 900px; } }
   .l-frame .big_title {
-    margin-top: 40px 0;
+    margin: 60px 0 40px 0;
     color: #4c4c4c;
     text-align: center;
     color: #E061B0;
     text-transform: uppercase; }
     @media (min-width: 1024px) {
       .l-frame .big_title {
-        margin-top: 100px; }
-        .l-frame .big_title.small {
-          margin-top: 43px 0; } }
+        margin-top: 100px; } }
   .l-frame #aboutme .aboutme_cont {
     display: flex;
     flex-direction: column;
@@ -179,8 +173,8 @@ h2 {
         flex-direction: row;
         margin-left: 3vw; } }
     .l-frame #aboutme .aboutme_cont .profile_pic {
-      width: 250px;
-      height: 250px;
+      width: 180px;
+      height: 180px;
       margin: 0 auto;
       border-radius: 580px;
       object-fit: cover; }
@@ -251,19 +245,20 @@ h2 {
     .l-frame .price_cont .obs {
       width: 100%;
       background-color: #f3f3f3;
-      box-sizing: border-box;
-      margin-top: 20px; }
+      box-sizing: border-box; }
       @media (min-width: 1024px) {
         .l-frame .price_cont .obs {
-          width: 40%;
-          margin-top: 0; } }
+          width: 40%; } }
       .l-frame .price_cont .obs ul {
         padding: 20px 30px; }
         .l-frame .price_cont .obs ul li {
+          font-weight: 300;
+          color: #4c4c4c;
+          font-size: 16px;
+          line-height: 27px;
           margin-bottom: 10px;
           list-style-type: none;
-          color: black;
-          margin-bottom: 30px; }
+          color: black; }
           .l-frame .price_cont .obs ul li:last-child {
             margin-bottom: 0; }
           .l-frame .price_cont .obs ul li .is-red {
@@ -283,7 +278,7 @@ h2 {
     .l-frame #access .address_cont .telephone {
       text-decoration: none;
       color: #E061B0;
-      margin-top: 39px;
+      margin-top: 19px;
       font-weight: 400;
       display: block;
       font-size: 20px; }
@@ -291,8 +286,10 @@ h2 {
       font-size: 15px;
       margin: 0; }
     .l-frame #access .address_cont .address {
-      margin: 0 auto;
-      width: 80%; }
+      margin-left: 30px;
+      width: 80%;
+      margin-top: 20px;
+      line-height: 24px; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .address {
           width: 26%;
@@ -308,14 +305,11 @@ h2 {
         width: 100%; }
     .l-frame #access .address_cont .map {
       width: 100vw;
-      height: 380px;
-      margin: 0 0 50px 0;
-      margin-top: 40px; }
+      height: 450px; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .map {
-          margin-top: 0;
           width: 30%;
-          height: 380px;
+          height: 290px;
           margin: 21px 0 0 0; } }
   .l-frame #schedule {
     padding: 0; }
@@ -324,26 +318,22 @@ h2 {
         width: 90%;
         margin: 0 auto; } }
     .l-frame #schedule .calendar_txt {
-      margin-left: 40px;
+      margin-top: 0;
+      margin-bottom: 30px;
+      margin-left: 20px;
       line-height: 25px; }
       @media (min-width: 1024px) {
         .l-frame #schedule .calendar_txt {
           margin-left: 0; } }
     .l-frame #schedule .calendar_iframe {
       border-width: 0;
-      width: 100%;
-      height: 460px; }
+      width: 100%; }
   .l-frame #instagram {
     width: 100%;
     margin: 0 auto; }
     @media (min-width: 1024px) {
       .l-frame #instagram {
         width: 90%; } }
-    .l-frame #instagram iframe {
-      margin-top: 10px; }
-      @media (min-width: 1024px) {
-        .l-frame #instagram iframe {
-          margin-top: 0; } }
   .l-frame .footer {
     font-size: 15px;
     margin: 0 auto;
