--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -9,15 +9,7 @@ body{
 }
 p{
   color: #4c4c4c;
-	font-size: 15px;
-}
-li{
-	font-weight: 300;
-  color: #4c4c4c;
-	font-size: 16px;
-	line-height: 35px;
-	@media (min-width: 1024px) {
-	}
+	font-size: 17px;
 }
 
 h1{
@@ -39,6 +31,7 @@ h2{
 	font-family: sans-serif;
 	font-size: 14px;
 	margin-top: 20px;
+  width: 90%;
 	@media (min-width: 1024px) {
 		margin-left: 0;
 	}
@@ -48,10 +41,10 @@ h2{
 	display: flex;
 	flex-direction: row;
   align-items: baseline;
-	margin-top: 67px;
+	margin-top: 33px;
 	.insta_logo{
-		width: 48px;
-		margin-left: 50px;
+		width: 38px;
+		margin-left: 40px;
 		transition: all 0.5s ease;
 		&:hover{
 			filter:saturate(1.3);
@@ -68,9 +61,9 @@ h2{
 		border-radius: 3px;
 		background-color:#00c300;
 		border-radius: 10px;
-		width: 259px;
+    width: 199px;
 		.line_logo{
-			height: 50px;
+			height: 40px;
 			margin-left: 10px;
 		}
 
@@ -95,6 +88,7 @@ h2{
 
 .subtitle{
 	color:#4c4c4c;
+  margin-top: 0;
 }
 
 .small_font{
@@ -154,7 +148,7 @@ h2{
 		font-size: 18px;
 		box-sizing: border-box;
 		justify-content: center;
-		height: 190px;
+		height: 80px;
 
 		@media (min-width: 1024px) {
 			height: 120px;
@@ -166,7 +160,7 @@ h2{
 				flex:1;
 			}
 			img{
-				width:200px;
+				width:100px;
 				@media (min-width: 1024px) {
 					width:130px;
 				}
@@ -198,16 +192,13 @@ h2{
 	}
 
 	.big_title{
-		margin-top: 40px 0;
+    margin: 60px 0 40px 0;
 		color: #4c4c4c;
     text-align: center;
 		color: #E061B0;
 		text-transform: uppercase;
 		@media (min-width: 1024px) {
 			margin-top: 100px;
-			&.small{
-				margin-top: 43px 0;
-			}
 		}
 
 	}
@@ -223,8 +214,8 @@ h2{
 			// justify-content: center;
 			align-items: flex-start;
 			.profile_pic{
-				width: 250px;
-				height: 250px;
+				width: 180px;
+				height: 180px;
 				margin: 0 auto;
 				border-radius: 580px;
 				object-fit: cover;
@@ -322,21 +313,22 @@ h2{
 			width: 100%;
 			background-color: #f3f3f3;
 			box-sizing: border-box;
-			margin-top: 20px;
 
 			@media (min-width: 1024px) {
 				width: 40%;
-				margin-top: 0;
 			}
 
 			ul{
 				padding: 20px 30px;;
 
 				li{
+					font-weight: 300;
+				  color: #4c4c4c;
+					font-size: 16px;
+					line-height: 27px;
 					margin-bottom: 10px;
 					list-style-type:none;
 					color:black;
-					margin-bottom: 30px;
 					&:last-child{
 						margin-bottom: 0;
 					}
@@ -366,7 +358,7 @@ h2{
 			.telephone{
 				text-decoration: none;
 				color: #E061B0;
-				margin-top: 39px;
+				margin-top: 19px;
 				font-weight: 400;
 		    display: block;
 				font-size: 20px;
@@ -377,8 +369,10 @@ h2{
 				margin: 0;
 			}
 			.address{
-				margin: 0 auto;
+				margin-left: 30px;
     		width: 80%;
+				margin-top: 20px;
+		    line-height: 24px;
 				@media (min-width: 1024px) {
 					width: 26%;
 					margin: 0;
@@ -401,13 +395,10 @@ h2{
 
 			.map{
 				width: 100vw;
-				height: 380px;
-				margin: 0 0 50px 0;
-		    margin-top: 40px;
+		    height: 450px;
 				@media (min-width: 1024px) {
-					margin-top: 0;
 					width: 30%;
-					height: 380px;
+			    height: 290px;
 			    margin: 21px 0 0 0;
 				}
 
@@ -423,7 +414,9 @@ h2{
 		}
 
 		.calendar_txt{
-			margin-left: 40px;
+			margin-top: 0;
+			margin-bottom: 30px;
+			margin-left: 20px;
 			line-height: 25px;
 
 			@media (min-width: 1024px) {
@@ -432,8 +425,7 @@ h2{
 		}
 		.calendar_iframe{
 			border-width: 0;
-	    width: 100%;
-    	height: 460px;
+			width: 100%;
 		}
 	}
 
@@ -444,12 +436,6 @@ h2{
     margin: 0 auto;
 		@media (min-width: 1024px) {
 			width: 90%;
-		}
-		iframe{
-			margin-top: 10px;
-			@media (min-width: 1024px) {
-				margin-top: 0;
-			}
 		}
 	}
 
